# bigint

./: CMakeLists.txt
example/: main.cpp
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/bigint/: BigInt.h
include/bigint/conversion/: DecStringConverter.h  RawStringConverter.h  StringDecoder.h  StringEncoder.h
src/: CMakeLists.txt
src/bigint/conversions/: from_string.cpp  to_string.cpp
src/bigint/conversions/classes/: BinStringConverter.h  DecStringConverter.h  RawStringConverter.h  StringConverter.h
src/bigint/def/: constructors.cpp  getter_setter.cpp
src/bigint/operations/: add.cpp  compare.cpp  convert.cpp  print.cpp  signs.cpp  string.cpp  subtract.cpp
src/bigint/utils/: bin_to_dec.cpp  dec_to_bin.cpp  padding.cpp  pruning.cpp  utils.h
tests/: CMakeLists.txt  addition_test.cpp  comparison_test.cpp  raw_str_convrs_test.cpp  string_conversion_test.cpp
